<resources>
    <string name="app_name">Hangry Foodie Hangout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Friends</string>
    <string name="tab_text_2">Groups</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="restaurants_near_me">Find Restaurants near me.</string>
    <string name="facebook_app_id">176032896559037</string>
    <string name="fb_login_protocol_scheme">fb176032896559037</string>
    <string name="FriendGroup">Groups and Friends</string>
    <string name="fb_login_cancel">Facebook login cancelled</string>
    <string name="fb_login_error">There was an error logging in to facebook</string>

    <string name="sel_group_hangout">Select Friend Group</string>
    <string name="friends_btn">Friends and Groups</string>
    <string name="restaurants_btn">Find a Restaurant</string>
    <string name="hangout_btn">Start a Hangout</string>
    <string name="logout_btn">Log Out</string>
    <string name="google_app_id">10</string>
    <string name="group_formatting">%1s Members</string>
    <string name="title_activity_hangout">HangoutActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="order_and_pay">Order and Pay</string>
    <string name="current_hangouts">Current Hangouts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_instructions">Swipe down to get restaurants near you.</string>
    <string name="remove_friend">Remove friend</string>
    <string name="order_complete_activity">Order Complete Activity</string>
    <string name="hangout_label_text">Hangout Time:</string>
    <string name="rest_label_text">Place:</string>
    <string name="group_name_text">Group name:</string>

</resources>
