<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="159dp"
            android:layout_height="126dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="78dp"
            android:lineSpacingExtra="8sp"
            android:onClick="openFriendGroup"
            android:text="@string/friends_btn"
            android:textSize="20sp"
            android:background = "@drawable/rounded_btn"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_marginLeft="17dp"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/btn_favorites"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="164dp"
            android:layout_height="125dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="27dp"
            android:layout_marginTop="171dp"
            android:lineSpacingExtra="8sp"
            android:onClick="openFavorites"
            android:text="@string/restaurants_btn"
            android:textSize="20sp"
            android:background = "@drawable/rounded_btn"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="96dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="27dp" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="161dp"
            android:layout_height="124dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btn_favorites"
            android:layout_marginBottom="78dp"
            android:lineSpacingExtra="8sp"
            android:onClick="openLogout"
            android:text="@string/logout_btn"
            android:textSize="20sp"
            android:background = "@drawable/rounded_btn"
            android:layout_alignLeft="@+id/btn_favorites" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="155dp"
            android:layout_height="122dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/button"
            android:layout_marginBottom="171dp"
            android:lineSpacingExtra="8sp"
            android:onClick="openHangout"
            android:text="@string/hangout_btn"
            android:textSize="20sp"
            android:background = "@drawable/rounded_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignLeft="@+id/button" />

    </RelativeLayout>




</android.support.constraint.ConstraintLayout>